--- a/index.html
+++ b/index.html
@@ -151,16 +151,15 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
   <span>💵 دفع عند الاستلام</span>
 </div>
 
+
 <section class="content">
   <button class="cta">🛍️ اطلب بكل سهولة</button>
 </section>
 
-<!-- الشبكة الموحدة للأربعة عناصر -->
 <div class="section">
-  <div class="grid unified-grid">
-    <!-- بطاقة عرض المنتجات -->
-    <div class="card">
-      <h3>🛍️ عرض المنتجات</h3>
+  <div class="grid">
+    <div class="card" id="products">
+      <a href="products.html" class="cta">🛍️ عرض المنتجات</a>
       <div class="products">
         <div class="product">
           <img src="images/تفاح.jpg" alt="تفاح">
@@ -171,27 +170,26 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
           <strong>موز</strong>
         </div>
       </div>
-      <a href="products.html" class="cta">عرض المنتجات</a>
     </div>
-
-    <!-- بطاقة لوحة التحكم -->
     <div class="card">
-      <h3>⚙️ لوحة تحكم</h3>
-      <p>إدارة الطلبات، المنتجات، والتقارير بسهولة</p>
-      <iframe src="dashboard.html" width="100%" height="150px" style="border:none;"></iframe>
+      <h3>لوحة تحكم كاملة</h3>
+      <p>إدارة الطلبات، المنتجات، والتقارير اليومية بسهولة</p>
+      <iframe src="dashboard.html" width="100%" height="600px" style="border:none;"></iframe>
     </div>
+  </div>
+</div>
 
-    <!-- بطاقة تتبع الطلب -->
+<div class="section">
+  <div class="grid">
     <div class="card">
-      <h3>🚚 تتبع الطلب</h3>
-      <p>المندوب: بهاء الدين بني عامر</p>
-      <div id="map" style="width:100%; height:150px;"></div>
+      <h3>تتبع وتوصيل الطلبات</h3>
+      <p>تتبع مباشر لحالة الطلب والمندوب</p>
+      <h2>حالة الطلب: <span id="orderStatus">–</span></h2>
+      <div id="map" style="width:100%; height:400px;"></div>
     </div>
-
-    <!-- بطاقة طلب #152 -->
     <div class="card">
-      <h3>🧾 طلب #152</h3>
-      <p>حالة الطلب: <span style="color:green">في الطريق</span></p>
+      <h3>طلب #152</h3>
+      <p>المندوب: بهاء الدين بني عامر<br><span style="color:green">في الطريق</span></p>
     </div>
   </div>
 </div>
