--- a/index.html
+++ b/index.html
@@ -122,6 +122,62 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
 /* تصغير الخرائط وصور المنتجات داخل البطاقات */
 .unified-grid #map { height:120px !important; }
 .unified-grid .product img { height:60px !important; }
+.footer-extended {
+  background: #083d66;
+  color: #fff;
+  padding: 20px 10px;
+  text-align: center;
+  font-family: 'Cairo', sans-serif;
+}
+
+.footer-extended a {
+  color: #8bdc65;
+  text-decoration: none;
+}
+
+.footer-top {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 15px;
+  margin-bottom: 10px;
+}
+
+.contact-info p {
+  margin: 3px 0;
+  font-size: 14px;
+}
+
+.social-icons a {
+  font-size: 20px;
+  margin: 0 8px;
+  display: inline-block;
+  transition: transform 0.2s;
+}
+
+.social-icons a:hover {
+  transform: scale(1.2);
+}
+
+.footer-bottom {
+  font-size: 12px;
+  color: #b0e5a7;
+  margin-top: 10px;
+  border-top: 1px solid #6bcf63;
+  padding-top: 8px;
+}
+
+/* ريسبونسف للهاتف */
+@media (max-width:768px) {
+  .footer-top {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .contact-info p { font-size: 12px; }
+  .social-icons a { font-size: 18px; margin: 0 5px; }
+  .footer-bottom { font-size: 10px; }
+}
 
 </style>
 </head>
@@ -196,6 +252,31 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
 <div class="footer">
   <div class="btn">🧾 جاهز لبدء البيع اليوم</div>
   <div class="contact"><a href="tel:+962789119926" class="contact">📞 اتصل الآن</a></div>
+</div>
+<!-- Footer احترافي -->
+<div class="footer-extended">
+  <div class="footer-top">
+    <div class="contact-info">
+      <p>📞 هاتف: <a href="tel:+962789119926">+962 789 119 926</a></p>
+      <p>📧 بريد إلكتروني: <a href="mailto:info@deiralasal.com">rawanbaniamer3@gmail.com</a></p>
+      <p>📍 العنوان: اربد-لواء الكوره-كفرالماء-الشارع الرئيسي -بجانب كازية ابو شريعه</p>
+      <div class="social-icons">
+      <a href="https://wa.me/962789119926" target="_blank" title="واتساب">🟢</a>
+      <a href="https://www.facebook.com/profile.php?id=100082949517068" target="_blank" title="فيسبوك">📘</a>
+    </div>
+    </div>
+
+    <div class="social-icons">
+      <a href="#" target="_blank">🌐</a>
+      <a href="#" target="_blank">📘</a>
+      <a href="#" target="_blank">📸</a>
+      <a href="#" target="_blank">💬</a>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p>© 2026 جميع الحقوق محفوظة - أسواق دير العسل للخضار والفواكه</p>
+  </div>
 </div>
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
