--- a/index.html
+++ b/index.html
@@ -303,8 +303,8 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
   <div class="footer-top">
     <div class="contact-info">
       <p>📞 هاتف: <a href="tel:+962789119926">+962 789 119 926</a></p>
-      <p>📧 بريد إلكتروني: <a href="mailto:info@deiralasal.com">info@deiralasal.com</a></p>
-      <p>📍 العنوان: عمان، الأردن</p>
+      <p>📧 بريد إلكتروني: <a href="mailto:info@deiralasal.com">rawanbaniamer3@gmail.com</a></p>
+      <p>📍 لواء الكوره-كفرالماء-الشارع الرئيسي -بجانب كازية ابو شريعه</p>
     </div>
 
     <div class="social-icons">
@@ -328,10 +328,7 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
   </div>
 </div>
 
-  <div class="footer-bottom">
-    <p>© 2026 جميع الحقوق محفوظة - أسواق دير العسل للخضار والفواكه</p>
-  </div>
-</div>
+ 
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
