--- a/index.html
+++ b/index.html
@@ -258,6 +258,17 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
 }
 
 }
+.btn-icon {
+  width: 24px;       /* حجم الصورة */
+  height: 24px;
+  vertical-align: middle;  /* تصطف مع النص */
+  margin-right: 8px;       /* مسافة بين الصورة والكلمة */
+}
+.footer .btn {
+  background: url('images/مندوب.png') no-repeat center left;
+  background-size: 24px 24px;
+  padding-left: 35px;  /* مسافة النص عن الصورة */
+}
 
 </style>
 </head>
@@ -330,7 +341,9 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
   </div>
 </div>
 <div class="footer">
-  <div class="btn">🧾 جاهز لبدء البيع اليوم</div>
+    <img src="images/مندوب.png" alt="مندوب" class="btn-icon">
+    جاهز لبدء البيع اليوم
+  </div>
   <div class="contact"><a href="tel:+962789119926" class="contact">📞 اتصل الآن</a></div>
 </div>
 <div class="footer-extended">
