--- a/index.html
+++ b/index.html
@@ -266,8 +266,73 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
 }
 .footer .btn {
   background: url('images/مندوب.png') no-repeat center left;
-  background-size: 24px 24px;
+  background-size: 50px 50px;
   padding-left: 35px;  /* مسافة النص عن الصورة */
+}
+.footer {
+  text-align: center;
+  margin-top: 40px;
+}
+
+.footer-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 10px; /* المسافة بين الزرين */
+  flex-wrap: wrap;
+}
+
+.footer .btn, .footer .contact a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 12px 20px;
+  border-radius: 30px;
+  font-size: 16px;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.footer .btn {
+  background-color: #ff8c1a;
+  color: #fff;
+}
+
+.footer .btn-icon {
+  width: 20px;
+  height: 20px;
+  margin-right: 6px;
+
+  /* إزالة أي خلفية */
+  background: transparent;
+}
+
+.footer .contact a {
+  background-color: #083d66;
+  color: #fff;
+  text-decoration: none;
+}
+
+.footer-info {
+  margin-top: 15px;
+  font-size: 12px;
+  color: #fff;
+}
+
+/* === ريسبونسف للهاتف === */
+@media (max-width:768px) {
+  .footer-buttons {
+    flex-wrap: nowrap; /* يجمعهم جنب بعض */
+  }
+  .footer .btn, .footer .contact a {
+    font-size: 14px;
+    padding: 10px 15px;
+  }
+  .footer .btn-icon {
+    width: 16px;
+    height: 16px;
+    margin-right: 5px;
+    background: transparent; /* بنفس لون الصفحة */
+  }
 }
 
 </style>
@@ -340,12 +405,15 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
     </div>
   </div>
 </div>
-<div class="footer">
-    <img src="images/مندوب.png" alt="مندوب" class="btn-icon">
-    جاهز لبدء البيع اليوم
+<div class="footer-buttons">
+    <div class="btn">
+      <img src="images/مندوب.png" alt="مندوب" class="btn-icon">
+      جاهز لبدء البيع اليوم
+    </div>
+    <div class="contact">
+      <a href="tel:+962789119926">📞 اتصل الآن</a>
+    </div>
   </div>
-  <div class="contact"><a href="tel:+962789119926" class="contact">📞 اتصل الآن</a></div>
-</div>
 <div class="footer-extended">
   <div class="footer-top">
     <div class="contact-info">
