--- a/index.html
+++ b/index.html
@@ -273,55 +273,25 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
   text-align: center;
   margin-top: 40px;
 }
-
 .footer-buttons {
   display: flex;
   justify-content: center;
   gap: 10px; /* المسافة بين الزرين */
-  flex-wrap: wrap;
-}
-
-.footer .btn, .footer .contact a {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 12px 20px;
-  border-radius: 30px;
-  font-size: 16px;
-  cursor: pointer;
-  text-decoration: none;
-}
-
-.footer .btn {
-  background-color: #ff8c1a;
-  color: #fff;
+  flex-wrap: wrap; /* لتجنب كسر التصميم */
 }
 
 .footer .btn-icon {
-  width: 20px;
+  width: 20px; /* حجم أيقونة المندوب */
   height: 20px;
-  margin-right: 6px;
-
-  /* إزالة أي خلفية */
-  background: transparent;
+  margin-right: 6px; /* مسافة بين الصورة والنص */
+  background: transparent; /* أي خلفية تختفي */
+  vertical-align: middle;
 }
 
-.footer .contact a {
-  background-color: #083d66;
-  color: #fff;
-  text-decoration: none;
-}
-
-.footer-info {
-  margin-top: 15px;
-  font-size: 12px;
-  color: #fff;
-}
-
-/* === ريسبونسف للهاتف === */
+/* ريسبونسف الهاتف */
 @media (max-width:768px) {
   .footer-buttons {
-    flex-wrap: nowrap; /* يجمعهم جنب بعض */
+    flex-wrap: nowrap; /* يبقوا جنب بعض */
   }
   .footer .btn, .footer .contact a {
     font-size: 14px;
@@ -331,10 +301,8 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
     width: 16px;
     height: 16px;
     margin-right: 5px;
-    background: transparent; /* بنفس لون الصفحة */
   }
 }
-
 </style>
 </head>
 <body>
