--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
     right:10px !important;
     top:auto !important; 
     z-index:2 !important; 
+    background:transparent;
   }
-  .profile-img { width:40px !important; height:40px !important; }
+  .profile-img { width:40px !important; height:40px !important;background:transparent; }
   .manager-name { font-size:6px !important; margin-top:2px !important; display:block; }
 
   /* الخضار ملاصقة للشريط */
@@ -304,6 +305,7 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
     height: 14px;
   }
 }
+
 
 
 </style>
