--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  width: 24px;
-  height: 24px;
+  width: 50px;
+  height: 50px;
   margin-right: 8px;
 }
 
@@ -386,7 +386,7 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
     <span class="icon-wrapper">
       <img src="images/مندوب.png" alt="مندوب">
     </span>
-    🧾 جاهز لبدء البيع اليوم
+تواصل مع المندوب 
   </button>
 
   <!-- زر الاتصال -->
