--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
   border: none;
   padding: 12px 20px;
   border-radius: 40px;
-  font-size: 16px;
+  font-size: 13px;
   display: flex;
   align-items: center;
   cursor: pointer;
@@ -258,9 +258,9 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 50%;
-  width: 24px;
-  height: 24px;
+   border-radius: 30px;
+  width: 20px;
+  height: 20px;
   margin-right: 8px;
 }
 
@@ -301,8 +301,8 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
   }
 
   .footer-buttons .btn .icon-wrapper img {
-    width: 14px;
-    height: 14px;
+    width: 20px;
+    height: 20px;
   }
 }
 
