--- a/index.html
+++ b/index.html
@@ -230,41 +230,80 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
   text-decoration: none; /* إزالة الخط تحت النص */
 }
 /* === أزرار الفوتر مع المندوب والاتصال === */
+/* === أزرار الفوتر مع المندوب والاتصال === */
 .footer-buttons {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 10px;
-  flex-wrap: nowrap; /* مهم: يبقوا جنب بعض */
+  flex-wrap: wrap; /* ليكون مرن على الهاتف */
+  margin-top: 20px;
 }
 
-/* زر المندوب */
-.mandob-btn {
+/* زر البيع */
+.footer-buttons .btn {
+  background: #ff8c1a;  /* لون الزر البرتقالي */
+  color: #fff;
+  border: none;
+  padding: 12px 20px;
+  border-radius: 40px;
+  font-size: 16px;
   display: flex;
   align-items: center;
-  gap: 8px;
+  cursor: pointer;
 }
 
-/* صورة المندوب */
-.mandob-img {
-  width: 26px;
-  height: auto;
+/* الدائرة الخاصة بصورة المندوب داخل الزر */
+.footer-buttons .btn .icon-wrapper {
+  background-color: #ff8c1a;  /* نفس لون الزر */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  margin-right: 8px;
 }
 
-/* الهاتف */
-@media (max-width: 768px) {
+/* حجم صورة المندوب داخل الدائرة */
+.footer-buttons .btn .icon-wrapper img {
+  width: 16px;
+  height: 16px;
+}
+
+/* زر الاتصال */
+.footer-buttons .contact {
+  background: #083d66;
+  color: #fff;
+  padding: 12px 20px;
+  border-radius: 30px;
+  text-decoration: none; /* إزالة الخط */
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+}
+
+/* --- ريسبونسف للهاتف --- */
+@media (max-width:768px) {
   .footer-buttons {
-    flex-direction: row; /* جنب بعض */
+    flex-wrap: wrap;
+    gap: 8px;
   }
 
-  .mandob-img {
-    width: 34px; /* تكبير صورة المندوب على الهاتف */
-  }
-
-  .mandob-btn,
-  .contact {
+  .footer-buttons .btn,
+  .footer-buttons .contact {
     font-size: 14px;
-    padding: 10px 14px;
+    padding: 10px 16px;
+  }
+
+  .footer-buttons .btn .icon-wrapper {
+    width: 20px;
+    height: 20px;
+  }
+
+  .footer-buttons .btn .icon-wrapper img {
+    width: 14px;
+    height: 14px;
   }
 }
 
