--- a/index.html
+++ b/index.html
@@ -387,11 +387,14 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
     </span>
 تواصل مع المندوب 
   </button>
-
+   
   <!-- زر الاتصال -->
-  <a href="tel:+962789119926" class="contact">
+   <button class="btn">
+    <span class="icon-wrapper">
+  <a href="tel:+962789119926" class="contact">   </span>
     📞 اتصل الآن
   </a>
+      </button>
 </div>
 
 
