--- a/index.html
+++ b/index.html
@@ -386,18 +386,12 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
       <img src="images/مندوب.png" alt="مندوب">
     </span>
 تواصل مع المندوب 
-  </button>
-   
+  </button> 
   <!-- زر الاتصال -->
-   <button class="btn">
-    <span class="icon-wrapper">
-  <a href="tel:+962789119926" class="contact">   </span>
+  <a href="tel:+962789119926" class="contact">  
     📞 اتصل الآن
   </a>
-      </button>
-</div>
-
-
+   </div>
 </div>
 <div class="footer-extended">
   <div class="footer-top">
