--- a/index.html
+++ b/index.html
@@ -393,35 +393,43 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
   </a>
    </div>
 </div>
-<div class="footer-extended">
-  <div class="footer-top">
-    <div class="contact-info">
-      <p>📞 هاتف: <a href="tel:+962789119926">+962 789 119 926</a></p>
-      <p>📧 بريد إلكتروني: <a href="mailto:info@deiralasal.com">rawanbaniamer3@gmail.com</a></p>
-      <p>📍 لواء الكوره-كفرالماء-الشارع الرئيسي -بجانب كازية ابو شريعه</p>
-    </div>
+<div class="footer-top" style="flex-direction:column; align-items:center; text-align:center;">
 
-    <div class="social-icons">
-      <!-- أيقونة واتساب -->
-      <a href="https://wa.me/962789119926" target="_blank" title="واتساب">
-        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="#25D366">
-          <path d="M20.52 3.48a11.949 11.949 0 0 0-17 0c-4.68 4.68-5.08 12-1 16.5l-1 4.5 4.5-1c4.5 4.08 11.82 3.68 16.5-1a11.949 11.949 0 0 0 0-17Zm-8.52 17.52c-3.21 0-6.38-1.12-8.79-3.52a10.867 10.867 0 0 1-3.52-8.79c0-2.95 1.15-5.82 3.23-7.9a10.867 10.867 0 0 1 8.79-3.52c2.95 0 5.82 1.15 7.9 3.23a10.867 10.867 0 0 1 3.52 8.79c0 2.95-1.15 5.82-3.23 7.9a10.867 10.867 0 0 1-8.79 3.52Zm5.41-7.17c-.28-.14-1.66-.82-1.92-.91-.26-.09-.45-.14-.64.14-.19.28-.73.91-.9 1.1-.17.19-.34.21-.63.07-.28-.14-1.18-.43-2.24-1.38-.83-.74-1.39-1.65-1.56-1.93-.17-.28-.02-.43.12-.57.12-.12.28-.28.42-.42.14-.14.19-.25.28-.42.09-.17.04-.31-.02-.45-.06-.14-.64-1.54-.88-2.12-.23-.55-.46-.48-.64-.49l-.55-.01c-.17 0-.45.06-.69.31s-.91.89-.91 2.17c0 1.28.93 2.52 1.06 2.7.14.19 1.84 2.81 4.45 3.92.62.27 1.1.43 1.47.55.62.2 1.19.17 1.64.1.5-.08 1.66-.68 1.89-1.33.23-.64.23-1.19.16-1.33-.07-.14-.26-.23-.54-.37Z"/>
-        </svg>
+  <div class="contact-info">
+    <p>📞 هاتف: 
+      <a href="tel:+962789119926">+962 789 119 926</a>
+    </p>
+
+    <p>
+      <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="#25D366" style="vertical-align:middle;">
+        <path d="M20.52 3.48a11.949 11.949 0 0 0-17 0c-4.68 4.68-5.08 12-1 16.5l-1 4.5 4.5-1c4.5 4.08 11.82 3.68 16.5-1a11.949 11.949 0 0 0 0-17Z"/>
+      </svg>
+      واتساب: 
+      <a href="https://wa.me/962789119926" target="_blank">
+        راسلنا عبر واتساب
       </a>
-      <!-- أيقونة فيسبوك -->
-      <a href="https://facebook.com/yourpage" target="_blank" title="فيسبوك">
-        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="#1877F2">
-          <path d="M22.675 0H1.325C.593 0 0 .593 0 1.326v21.348C0 23.406.593 24 1.325 24H12.82v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.794.143v3.24l-1.918.001c-1.504 0-1.794.715-1.794 1.762v2.31h3.587l-.467 3.622h-3.12V24h6.116C23.406 24 24 23.406 24 22.674V1.326C24 .593 23.406 0 22.675 0Z"/>
-        </svg>
+    </p>
+
+    <p>
+      <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="#1877F2" style="vertical-align:middle;">
+        <path d="M22.675 0H1.325C.593 0 0 .593 0 1.326v21.348C0 23.406.593 24 1.325 24H12.82v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.794.143v3.24l-1.918.001c-1.504 0-1.794.715-1.794 1.762v2.31h3.587l-.467 3.622h-3.12V24h6.116C23.406 24 24 23.406 24 22.674V1.326C24 .593 23.406 0 22.675 0Z"/>
+      </svg>
+      فيسبوك: 
+      <a href="https://facebook.com/yourpage" target="_blank">
+        صفحتنا على فيسبوك
       </a>
-    </div>
+    </p>
+
+    <p>📧 البريد الإلكتروني: 
+      <a href="mailto:rawanbaniamer3@gmail.com">
+        rawanbaniamer3@gmail.com
+      </a>
+    </p>
+
+    <p>📍 لواء الكوره - كفرالماء - الشارع الرئيسي - بجانب كازية ابو شريعه</p>
   </div>
 
-  <div class="footer-bottom">
-    <p>© 2026 جميع الحقوق محفوظة - أسواق دير العسل للخضار والفواكه</p>
-  </div>
 </div>
-
  
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
