Add .content class for layout styling
Signed-off-by: rawan037 <rawanbaniamer037@gmail.com>

--- a/index.html
+++ b/index.html
@@ -143,7 +143,12 @@ body { background: linear-gradient(180deg,#0b5fa5,#0f8f6e); color:#fff; overflow
   gap: 15px;
   margin-bottom: 10px;
 }
-
+.content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 30px 0;
+}
 .contact-info p {
   margin: 3px 0;
   font-size: 14px;
